crates/weft-snapshots/tests/snapshots/solid-tsx/corpus-receipt.snap
---
source: crates/weft-snapshots/tests/snapshots.rs
description: corpus-receipt as solid-tsx
---
export type WeftEvent = { id: string; action: string; item?: string };

export type WeftProps = {
  data?: any;
  actions?: Record<string, (event: WeftEvent) => void>;
  onChange?: (path: string, value: unknown) => void;
};

function _text(v: unknown): string {
  if (typeof v === "string") return v;
  if (typeof v === "number") return Number.isFinite(v) ? String(v) : "";
  if (typeof v === "boolean") return String(v);
  return "";
}

function _squash(v: string): string {
  return v.trim().replace(/\s+/g, " ");
}

function PriceRow(props: WeftProps & { params?: any; slots?: any; id?: string }) {
  return (
    <div data-weft-id={props.id + "/row"} style={{ display: "flex", "flex-direction": "row", "align-items": "center" }}>
      <div data-weft-id={props.id + "/name"}>
        {!(_text(props.params.label).trim() === "") ? _squash(_text(props.params.label)) : ""}
      </div>
      <div data-weft-id={props.id + "/value"}>
        {!(_text(props.params.amount).trim() === "") ? _squash(_text(props.params.amount)) : ""}
      </div>
    </div>
  );
}

export default function WeftScreen(props: WeftProps) {
  return (
    <main data-weft-id="receipt" aria-label="Receipt">
      <div data-weft-id="lines" style={{ display: "flex", "flex-direction": "column" }}>
        <PriceRow data={props.data} actions={props.actions} onChange={props.onChange} id={"subtotal"} params={{ amount: props.data?.subtotal, label: "Subtotal" }} slots={{}} />
        <PriceRow data={props.data} actions={props.actions} onChange={props.onChange} id={"total"} params={{ amount: props.data?.total, label: "Total" }} slots={{}} />
      </div>
    </main>
  );
}
